# dspico8

./: .gitignore  .gitmodules  Makefile  README.md
.github/workflows/: build.yml
bench/: benchmark_fake08.cpp  benchmark_native.cpp  framehash_native.cpp  framehash_native_rs_ffi.cpp  smoke_runtime_rs_builtin.cpp
bench/carts/: api_mix.p8  api_mix_det.p8  fillrate.p8  sprite_stress.p8
docs/: architecture.md  benchmarks.md  framehashes.md  hybrid-target.md  official-pico8-investigation.md  research.md  roadmap.md  rust-port.md
native-rs/: Cargo.toml  build.rs
native-rs-core/: Cargo.toml
native-rs-core/include/: dsp_native_rs_core.h
native-rs-core/src/: lib.rs
native-rs/include/: dsp_native_rs.h
native-rs/src/: cart.rs  ffi.rs  lib.rs  lua_runtime.rs  pico8_dat.rs  runtime_core.rs
native/include/: dsp_native_builtin_carts.h  dsp_native_cart.h  dsp_native_common.h  dsp_native_runtime.h  dsp_native_runtime_rs.h
native/src/: dsp_native_cart.cpp  dsp_native_runtime.cpp  dsp_native_runtime_rs.cpp
platform/nds/: Makefile
platform/nds-native/: Makefile
platform/nds-native/arm9/: Makefile
platform/nds-rust-core/: Makefile
platform/nds-rust-core/arm7/: Makefile
platform/nds-rust-core/arm9/: Makefile
platform/nds-rust-runtime/: Makefile
platform/nds-rust-runtime/arm9/: Makefile
platform/nds/arm7/: Makefile
scripts/: build-nds-docker.sh  build-rust-core-armv5te.sh  build-rust-runtime-armv5te.sh  check-rust-core-armv5te.sh  compare-frame-hashes.sh  run-benchmarks.sh  smoke-rust-ffi.sh
source/: DefaultCart.h  FakoSettings.h
(+75 files in other folders)
