[package]
name = "dsp-native-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = ["std", "png"]
std = []
png = ["dep:png"]

[[bin]]
name = "cart_probe"
path = "src/bin/cart_probe.rs"

[[bin]]
name = "pico8_dat_probe"
path = "src/bin/pico8_dat_probe.rs"

[[bin]]
name = "benchmark_native_rs"
path = "src/bin/benchmark_native_rs.rs"

[[bin]]
name = "frame_hash_native_rs"
path = "src/bin/frame_hash_native_rs.rs"

[dependencies]
dsp-native-rs-core = { path = "../native-rs-core" }
png = { version = "0.18", optional = true }

[build-dependencies]
cc = "1.2"
